<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Register">


        <ImageView
            android:id="@+id/logo"
            android:elevation="10dp"
            android:layout_width="150dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/sign"
            android:layout_margin="10dp"
            android:contentDescription="@string/logo"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/regName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#263238"
            tools:ignore="TextContrastCheck" />


        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#263238"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#263238" />

        <EditText
            android:id="@+id/regRetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/re_enter"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#263238"
            tools:ignore="TextContrastCheck" />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/btn"
                    android:padding="5dp"
                    android:text="@string/register" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/regGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:padding="5dp"
                    android:text="@string/continue_with_google"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights,TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/regPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:background="@drawable/btn"
                    android:text="@string/continue_with_facebook" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
