<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".LogIn">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/log"
            android:layout_margin="10dp"
            android:contentDescription="@string/logo"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/logEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#263238"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/logPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#263238" />

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textStyle="italic|bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:padding="3dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp"
                    android:background="@drawable/btn"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/btn"
                    android:padding="5dp"
                    android:text="@string/register" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:padding="5dp"
                    android:text="@string/continue_with_google"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights,TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:background="@drawable/btn"
                    android:text="@string/continue_with_facebook" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

